# fsm-governance-engine-lib

./: .gitignore  API.md  AuditTrail.md  CHANGELOG.md  CODEX_INSTRUCTIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FSM_schema.json  GOVERNANCE.md  INDRASNET_CIVILIZATION_FOUNDATION.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  RELEASE.md  SECURITY.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  proposal.md  question.md  triage.md
.github/workflows/: ci-validate.yml  ci.yml  codex-guard.yml  fuzz.yml  validate-fsm.yml
docs/: API.md  AuditModel.md  AuditTrail.md  CHANGELOG.md  CI_validation.md  FSM_schema.json  FSM_schema.md  Invariants.md  README.en.md  example_fsm_definition.json
docs/examples/: CI_INTEGRATION.md  GOVERNANCE_EXAMPLE.md
docs/process/: TRIAGE.md
docs/release/: CHANGELOG_POLICY.md  PRE_RELEASE_CHECKLIST.md  RELEASE.md  RELEASE_LOG.md  RELEASE_NOTES_v0.1.0.md  SBOM.md
docs/security/: FAIL_CLOSED.md  FUZZING.md  HARDENING_STATUS.md
docs/spec/: FSM_Definition_Spec_v1.md  Schema_Evolution_Policy.md
examples/: audit_only_validation.rs  dao_grant_flow.rs  fsm_definition_loader.rs  governance_lifecycle.rs  treasury_flow.rs  voting.rs
examples/definitions/: audit_only.json  (+3 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: definition_parser.rs  definition_validate.rs
scripts/: codex_guard.sh  repro_check.sh  validate_fsm.sh
src/: audit.rs  definition.rs  enums.rs  error.rs  fsm.rs  governance_params.rs  lib.rs
tests/: definition_negative.rs  definition_proptest.rs  definitions_validation.rs  vector_validation.rs
(+44 files in other folders)
