[package]
name = "fsm_governance_engine_lib"
version = "0.1.0"
edition = "2024"
description = "FSM governance engine for NLnet proposal with audit trail and transition validation"
keywords = ["fsm","governance","audit","compliance"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IndrasNet108/fsm_governance_engine_lib"

[dependencies]
borsh = { version = "1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
