[package]
name = "fsm_governance_engine_lib"
version = "0.1.0"
edition = "2024"
description = "Declarative, validation-only FSM library with invariants and deterministic auditability"
keywords = ["fsm","governance","audit","compliance"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IndrasNet108/fsm-governance-engine-lib"

[dependencies]
borsh = { version = "1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.41"

[workspace]
members = ["fuzz"]

[dev-dependencies]
proptest = "1.10"
